--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,16 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>net.vitacraft</groupId>
+            <artifactId>jmjda</artifactId>
+            <version>dev-1.2.1-20240427_0116</version>
+        </dependency>
+        <dependency>
+            <groupId>net.dv8tion</groupId>
+            <artifactId>JDA</artifactId>
+            <version>5.0.0-beta.13</version>
+        </dependency>
+    </dependencies>
 </project>
