Added config loading for token and new channel

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,7 +1,7 @@
-token: gWAKgnw94gh3qwßw3gw4g
+token: token_here
 version: 2.0-ALPHA
 
 channels:
   welcome: 1138753190288961608
   counting: 1155317796163559424
-  config:
+  log: 1179903714799132722
