--- a/src/main/resources/filter/word-filter.yml
+++ b/src/main/resources/filter/word-filter.yml
@@ -8,13 +8,9 @@ blacklisted:
   - bastard
   - nutte
   - hurensohn
-  - huen
   - nuttensohn
-  - asshole
-  - bitch
   - breastjob
   - buttfuck
-  - cock
   - datnigga
   - dildo
   - ejaculate
@@ -25,37 +21,12 @@ blacklisted:
   - faggot
   - fagot
   - whore
-  - handjob
-  - hooker
-  - jackoff
-  - jackass
-  - lingerie
-  - mastabate
-  - mastabater
-  - masterbate
-  - masterblaster
-  - mastrabator
-  - masturbate
-  - mothafuck
-  - mothafucka
-  - mothafuckaz
-  - mothafucked
-  - mothafucker
-  - mothafuckin
-  - mothafucking
-  - mothafuckings
-  - motherfuck
-  - motherfucked
-  - motherfucker
-  - motherfuckin
-  - motherfucking
-  - motherfuckings
-  - motherlovebone
   - niger
   - nigerian
   - nigerians
   - nigg
   - nigga
+  - negga
   - niggah
   - niggaracci
   - niggard
@@ -83,18 +54,6 @@ blacklisted:
   - nignog
   - nigr
   - nigra
-  - pussie
-  - pussies
-  - pussy
-  - pussycat
-  - pussyeater
-  - pussyfucker
-  - pussylicker
-  - pussylips
-  - pussylover
-  - pussypounder
-  - sexed
-  - sexfarm
   - sexhound
   - sexhouse
   - sexing
@@ -107,10 +66,4 @@ blacklisted:
   - sexual
   - sexually
   - sexwhore
-  - suicide
-  - testicle
-  - terrorist
-  - vagina
-  - vaginal
   - whigger
-whitelisted:
